<resources>
    <string name="app_name">kiwi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="resto_ouvert">Ouvert</string>
    <string name="resto_ferme">Fermé</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titre des activités -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_page_inscription">PageInscription</string>
    <string name="title_activity_formulaire_inscription">FormulaireInscription</string>
    <string name="title_activity_page_connexion">PageConnexion</string>

    <!-- Boutons -->
    <string name="boutonCreerCompte">Créer un Compte</string>
    <string name="boutonSeConnecter">Se Connecter</string>
    <string name="boutonAccederSansCompte">Accéder Sans Compte</string>
    <string name="boutonRetour">Retour</string>
    <string name="boutonOk">OK !</string>

    <!-- Labels -->
    <string name="labelNom">Nom</string>
    <string name="labelPrenom">Prénom</string>
    <string name="labelPseudo">Pseudo</string>
    <string name="labelMail">Mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="confMdp">Confirmation du mot de passe</string>

    <!-- Textes par défaut -->
    <string name="defaultNom">Entrez votre nom de famille...</string>
    <string name="defaultPrenom">Entrez votre prénom...</string>
    <string name="defaultPseudo">Entrez votre pseudo KIWI...</string>
    <string name="defaultMail">exemple@entrezVotreMail.fr</string>
    <string name="defaultIDCorrects">Veuillez patienter...</string>
    <string name="defaultIDIncorrects">Identifiants / Mot de passe incorrect(s)...</string>
    <string name="defaultPhraseApp">Laissez la vie devenir votre KIWI !</string>
    <string name="title_activity_page_resto">PageResto</string>
    <string name="labelMonProfil">Mon Profil</string>
    <string name="labelJeMange">Je mange...</string>
    <string name="labelVegetarien">Végétarien</string>
    <string name="labelVegan">Vegan</string>
    <string name="labelSansGluten">Sans Gluten</string>
    <string name="labelSansLactose">Sans Lactose</string>
    <string name="labelHallal">Halal</string>
    <string name="userMailDefault">bruce.wayne@wayne-enterprise.com</string>
</resources>
