<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelNom"
        android:id="@+id/idLabelNom"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idTextNom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTextNom"
        android:layout_below="@+id/idLabelNom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/defaultNom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPrenom"
        android:id="@+id/idLabelPrenom"
        android:layout_below="@+id/idTextNom"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idTextNom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTextPrenom"
        android:layout_below="@+id/idLabelPrenom"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idLabelPrenom"
        android:hint="@string/defaultPrenom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPseudo"
        android:id="@+id/idLabelPseudo"
        android:layout_below="@+id/idTextPrenom"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idTextPrenom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTextPseudo"
        android:layout_below="@+id/idLabelPseudo"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idLabelPseudo"
        android:hint="@string/defaultPseudo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelMail"
        android:id="@+id/idLabelMail"
        android:layout_below="@+id/idTextPseudo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/idLabelMail"
        android:layout_alignParentStart="true"
        android:hint="@string/defaultMail"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mdp"
        android:id="@+id/idLabelMdp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/idTextMdp"
        android:layout_below="@+id/idLabelMdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confMdp"
        android:id="@+id/idLabelConfMdp"
        android:layout_below="@+id/idTextMdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/idTextConfMdp"
        android:layout_below="@+id/idLabelConfMdp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idLabelConfMdp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boutonRetour"
        android:id="@+id/boutonRetour"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:width="100dp"
        android:onClick="boutonRetourListener"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boutonOk"
        android:id="@+id/boutonOk"
        android:layout_alignBottom="@+id/boutonRetour"
        android:layout_alignParentEnd="true"
        android:width="100dp"
        android:onClick="boutonOkListener"/>
</RelativeLayout>
