<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.kiwi.kiwi.ProfilFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="42dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageProfilUser"
            android:layout_marginBottom="3dp"
            android:text="@string/labelPseudo"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/pseudoUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:width="300dp"
            android:height="40dp"
            android:ems="10"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pseudoUser"
            android:text="@string/labelPrenom"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/prenomUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginBottom="3dp"
            android:width="300dp"
            android:ems="10"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/prenomUser"
            android:text="@string/labelNom"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nomUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginBottom="3dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nomUser"
            android:text="@string/labelMail"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/mailUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:singleLine="false"
            android:text="@string/labelMonProfil"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mailUser"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:text="@string/labelJeMange"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15dp" />

        <CheckBox
            android:id="@+id/checkBoxVegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxVegetarien"
            android:checked="false"
            android:text="@string/labelVegan" />

        <CheckBox
            android:id="@+id/checkBoxSansGluten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxVegan"
            android:checked="false"
            android:text="@string/labelSansGluten" />

        <CheckBox
            android:id="@+id/checkBoxSansLactose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxSansGluten"
            android:checked="false"
            android:text="@string/labelSansLactose" />

        <CheckBox
            android:id="@+id/checkBoxHallal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxSansLactose"
            android:checked="false"
            android:text="@string/labelHallal" />

        <CheckBox
            android:id="@+id/checkBoxVegetarien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:checked="false"
            android:text="@string/labelVegetarien" />

        <ImageView
            android:id="@+id/imageProfilUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:background="@drawable/profil" />

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="false"
            android:background="@drawable/note48" />

        <Button
            android:id="@+id/buttonProfilOk"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/boutonOk" />


    </RelativeLayout>
</ScrollView>