<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kiwi.kiwi.PageConnexion"
    tools:showIn="@layout/activity_page_connexion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPseudo"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTextPseudo"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:hint="@string/defaultPseudo"
        android:width="300dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mdp"
        android:id="@+id/textView3"
        android:layout_below="@+id/idTextPseudo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/idTextMdp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:width="300dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boutonRetour"
        android:id="@+id/boutonRetour"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp"
        android:width="100dp"
        android:onClick="boutonRetourListener"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boutonOk"
        android:id="@+id/boutonOk"
        android:width="100dp"
        android:layout_alignTop="@+id/boutonRetour"
        android:layout_alignParentEnd="true"
        android:onClick="boutonOkListener"/>
</RelativeLayout>
