<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-70dp"
        android:src="@drawable/app_logo" />

    <Button
        android:id="@+id/boutonCreerCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-25dp"
        android:width="@dimen/buttonWidth"
        android:height="@dimen/buttonHeight"
        android:onClick="boutonCreerCompteListener"
        android:text="@string/boutonCreerCompte" />

    <Button
        android:id="@+id/boutonSeConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/boutonCreerCompte"
        android:layout_alignStart="@+id/boutonCreerCompte"
        android:layout_below="@+id/boutonCreerCompte"
        android:layout_marginTop="10dp"
        android:width="@dimen/buttonWidth"
        android:height="@dimen/buttonHeight"
        android:onClick="boutonSeConnecterListener"
        android:text="@string/boutonSeConnecter" />

    <Button
        android:id="@+id/boutonAccederSansCompte"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boutonSeConnecter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="boutonAccederSansCompteListener"
        android:text="@string/boutonAccederSansCompte" />

    <TextView
        android:id="@+id/phraseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/defaultPhraseApp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>